@@ -1,3 +1,8 @@
+2001-08-03  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gamewin.cc: Don't get stuck after teleporting.
+	* actions.cc: Avatar can open doors now.
+
 2001-08-02  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* objs/egg.cc (Egg_object): Rectangle was 1 tile too small.
